--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.21.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.5.0",
     "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1"
   }
 }
